# sber-agents

./: README.md
02-llm-api/: README.md  test.ts
02-llm-api/src/: bot.py
03-aidd/: .env.example  report.md  requirements.txt
03-aidd/docs/: idea.md  tasklist.md  vision.md
03-aidd/src/: 1.py  bot.py  llm.py  main.py  storage.py
04-multimodal/: Makefile  requirements.txt
04-multimodal — копия/: .env.example  .gitignore  pyproject.toml
04-multimodal — копия/docs/: tasklist.md
04-multimodal — копия/prompts/: text.txt
04-multimodal — копия/src/: llm.py
04-multimodal/docs/: conventions.md  idea.md  vision.md  workflow.md
04-multimodal/prompts/: audio.txt  img.txt
04-multimodal/src/: bot.py  main.py  models.py  storage.py
05-rag-langchain/: env.example  pyproject.toml  report.md
05-rag-langchain/src/: bot.py  handlers.py  indexer.py  indexer_with_json.py  rag.py
06-monitoring-qa/: pyproject.toml  report.md
06-monitoring-qa/src/: dataset_synthesizer.py  evaluation.py  indexer.py  rag.py
07-advanced-rag/: env.example  pyproject.toml  report.md
07-advanced-rag/docs/: rate_limiting_guide.md
07-advanced-rag/src/: config.py  dataset_synthesizer.py  evaluation.py  indexer.py
08-agents-langgraph/: env.example  pyproject.toml  report.md
08-agents-langgraph/prompts/: agent_system.txt
08-agents-langgraph/src/: agent.py  config.py  dataset_synthesizer.py  evaluation.py  indexer.py  tools.py
09-mcp/: pyproject.toml  report.md
09-mcp/prompts/: agent_system.txt
09-mcp/src/: agent.py  config.py  handlers.py  (+3 more)
10-guard/: report.md
docs/: idea.md
(+12 files in other folders)
